Updates to home page

--- a/index.html
+++ b/index.html
@@ -43,15 +43,40 @@
             <div class="wrapper">
               <h1>International Image Interoperability Framework</h1>
               <p>
-                A suite of API’s, open source software and a technical community dedicated
-                <br>
-                 to making the world’s image repositories interoperable and accessible
+                Making the world’s image repositories interoperable and accessible
               </p>
               <p>
                 <a href="technical-details.html"><input type="button" class="button-turquoise" value="Learn how to get started"></a>
               </p>
             </div>
           </header>
+
+          <section class="main-highlight-blurbs">
+            <div class="wrapper">
+              <div class="highlight community-driven">
+                <h2>Community Driven</h2>
+                <p>
+                 The IIIF is driven by a group of research libraries, national libraries, and nonprofit image repositories
+                 committed to opening access to cherished image resources
+                </p>
+              </div>
+              <div class="highlight defined-apis">
+                <h2>Defined APIs</h2>
+                <p>
+                  The IIIF is anchored by two well defined application programming interfaces developed and vetted
+                  by an open and rigorous community process
+                </p>
+              </div>
+              <div class="highlight plug-n-play">
+                <h2>Plug 'n Play Software</h2>
+                <p>
+                  The IIIF encourages and supports the development compatible image serving and viewing software that
+                  is easy to install and provides a dazzling user experience
+                </p>
+              </div>
+            </div>
+          </section>
+
           <section class="main-interactive-image">
             <div class="wrapper">
               <div class="try-it">
@@ -63,31 +88,7 @@
               </div>
             </div>
           </section>
-          <section class="main-highlight-blurbs">
-            <div class="wrapper">
-              <div class="highlight community-driven">
-                <h2>Community Driven</h2>
-                <p>
-                  The IIIF is driven by growing number of world class research libraries, national libraries and
-                  nonprofit image repositories committed to opening access to the world’s most cherished image resources
-                </p>
-              </div>
-              <div class="highlight open-source">
-                <h2>Open Source</h2>
-                <p>
-                  The IIIF encourages and supports the development of open source image serving and viewing software
-                  that provide a dazzling user experience.
-                </p>
-              </div>
-              <div class="highlight defined-apis">
-                <h2>Defined APIs</h2>
-                <p>
-                  The IIIF is anchored by two well defined application programming interfaces developed and vetted by
-                  an open and rigorous community process
-                </p>
-              </div>
-            </div>
-          </section>
+
         </article>
 
       </div> <!-- #main -->
