Added BL's image to home page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="select"></div>
               </div>
               <div class="container-image">
-                <img src="img/interactive-img-e-codices.png" alt="">
+                <img src="img/interactive-img-bl.png" alt="">
               </div>
             </div>
           </section>
