--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/normalize.min.css">
     <link href='http://fonts.googleapis.com/css?family=Raleway:100,300,500' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
 
     <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
@@ -80,12 +82,21 @@
           <section class="main-interactive-image">
             <div class="wrapper">
               <div class="try-it">
-                <div class="label">Try It</div>
-                <div class="select"></div>
+                <div class="label">Try it :</div>
+                <div class="iiif-url">
+                  http://stacks.stanford.edu/image/iiif/ff139pd0160%252FK90113-43/<select name="" class="try-it-region">
+                    <option value="full">full</option>
+                  </select>/<select name="" class="try-it-size">
+                    <option value="full">full</option>
+                  </select>/<select name="" class="try-it-rotation">
+                    <option value="0">0</option>
+                  </select>/native.jpg
+                </div>
               </div>
               <div class="container-image">
-                <img src="img/interactive-img-bl.png" alt="">
+                <img src="" alt="">
               </div>
+              <span class="main-interactive-img-info">God creates heaven and earth, from a Bible historiale; Genesis to Psalms.  British Library, Royal 19 D. iii, vol. 1, f. 3.</span>
             </div>
           </section>
 
@@ -97,47 +108,6 @@
     <div class="footer-container">
       <footer class="wrapper">
         Please send feedback to <a href="mailto:Please send feedback to iiif-discuss@googlegroups.com">iiif-discuss@googlegroups.com</a>
-        <!--
-        <div class="footer-column">
-          <h4>Fusce quis lacus</h4>
-          <ul>
-            <li>Lectus</li>
-            <li>Eu posuere enim  </li>
-            <li>Praesent lacus</li>
-            <li>Justo</li>
-            <li>Volupat viver</li>
-          </ul>
-        </div>
-        <div class="footer-column">
-          <h4>Morbi a posuere</h4>
-          <ul>
-            <li>Arcu nulla </li>
-            <li>Quis porta quam  </li>
-            <li>Praesent lacus </li>
-            <li>Donec ornare </li>
-            <li>Massa</li>
-          </ul>
-        </div>
-        <div class="footer-column">
-          <h4>Quis lacus</h4>
-          <ul>
-            <li>Vel </li>
-            <li>Porta leo congue </li>
-            <li>Quis vestibulum </li>
-            <li>Pellentesque tellus </li>
-            <li>In dui</li>
-          </ul>
-        </div>
-        <div class="footer-column">
-          <h4>Facilisis venenatis</h4>
-          <ul>
-            <li>Cras nec enim </li>
-            <li>Mi Mauris   </li>
-            <li>Condimentum </li>
-            <li>Luctus diam </li>
-          </ul>
-        </div>
-        -->
       </footer>
     </div>
 
