Added images to text heavy pages

--- a/apps-demos.html
+++ b/apps-demos.html
@@ -43,7 +43,7 @@
             <h1>Apps &amp; Demos</h1>
           </header>
 
-          <section class="wrapper">
+          <section class="image-viewers wrapper">
             <h2>Image viewing clients</h2>
             <dl>
               <dt><a href="https://github.com/ruven/iipmooviewer" target="_blank">IIP mooViewer</a></dt>
@@ -69,7 +69,7 @@
             </dl>
           </section>
 
-          <section class="wrapper">
+          <section class="image-servers wrapper">
             <h2>Image servers</h2>
             <dl>
               <dt><a href="http://sourceforge.net/projects/djatoka/" target="_blank">djatoka</a></dt>
@@ -107,7 +107,7 @@
             </dl>
           </section>
 
-          <section class="wrapper">
+          <section class="impl-demos wrapper">
             <h2>Implementation Demos</h2>
             <dl>
               <dt><a href="http://dmstech.github.io/mirador/demo/" target="_blank">Stanford University Libraries - Mirador demo</a></dt>
@@ -186,11 +186,6 @@
         -->
       </footer>
     </div>
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
-
-    <script src="js/main.js"></script>
 
   </body>
 </html>
