--- a/technical-details.html
+++ b/technical-details.html
@@ -54,7 +54,7 @@
             </a>
           </section>
 
-          <section class="wrapper">
+          <section class="quick-start wrapper">
             <p>
               This page is a quick-start guide for image repository managers and engineers who are interested in making
               their image repository interoperable, or just experimenting with IIIF.
@@ -69,8 +69,8 @@
             </ol>
           </section>
 
-          <section class="step wrapper">
-            <span class="step-box">Step 1</span>
+          <section class="step step-1 wrapper">
+            <!-- <span class="step-box">Step 1</span> -->
             <h2>Deploy an image server</h2>
             <p>
               In this step you will either deploy an image server for the first time, or adapt your existing image server to
@@ -111,13 +111,13 @@
               </ul>
             </p>
             <p>
-              Once you have deployed your image server, we highly recommend that you validate it to confirm that it complies with the
+              Once you have deployed your image server, we highly recommend that you <a href="http://iiif-test.stanford.edu/" target="_blank">validate it</a> to confirm that it complies with the
               IIIF Image API, and to determine its level of <a href="http://www-sul.stanford.edu/iiif/image-api/compliance.html" target="_blank">IIIF compliance</a>.
             </p>
           </section>
 
-          <section class="step wrapper">
-            <span class="step-box">Step 2</span>
+          <section class="step step-2 wrapper">
+            <!-- <span class="step-box">Step 2</span> -->
             <h2>Publish metadata</h2>
             <p>
               Now that you have an image server that delivers IIIF-compliant image URI’s, you need to publish metadata about your
@@ -125,8 +125,8 @@
             </p>
           </section>
 
-          <section class="step wrapper">
-            <span class="step-box">Step 3</span>
+          <section class="step step-3 wrapper">
+            <!-- <span class="step-box">Step 3</span> -->
             <h2>Deploy and integrate software</h2>
             <p>
               Now that you have an image server and published metadata its time to deploy software that makes use of the IIIF technology stack.  Ultimately
@@ -146,7 +146,7 @@
             </p>
           </section>
 
-          <section class="wrapper">
+          <section class="tips-n-tricks wrapper">
             <h2>Implementation Tips &amp; Tricks</h2>
             <ul>
               <li>
@@ -212,11 +212,6 @@
         -->
       </footer>
     </div>
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
-
-    <script src="js/main.js"></script>
 
   </body>
 </html>
