--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
               <h1>About IIIF</h1>
             </div>
           </header>
-          <section class="wrapper">
+          <section class="about-content wrapper">
             <p>
               Access to image-based resources is fundamental to research, scholarship and the transmission of cultural knowledge.
               Digital images are a container for much of the information content in the Web-based delivery of images, books, newspapers,
@@ -118,11 +118,6 @@
         -->
       </footer>
     </div>
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
-
-    <script src="js/main.js"></script>
 
   </body>
 </html>
