--- a/community.html
+++ b/community.html
@@ -43,19 +43,19 @@
             <h1>Community</h1>
           </header>
 
-          <section class="wrapper">
+          <section class="get-involved wrapper">
             <h2>How to get involved</h2>
             <p>
               We welcome any organization or individual interested in adopting the IIIF, developing software to support it, or giving
               feedback on the effort to join our discussion list at:
               <dl>
                 <dt></dt>
-                <dd><a href="https://groups.google.com/forum/#!forum/iiif-discuss" target="_blank">https://groups.google.com/forum/#!forum/iiif-discuss</a></dd>
+                <dd class="url"><a href="https://groups.google.com/forum/#!forum/iiif-discuss" target="_blank">https://groups.google.com/forum/#!forum/iiif-discuss</a></dd>
               </dl>
             </p>
           </section>
 
-          <section class="wrapper">
+          <section class="participants wrapper">
             <h2>Participating institutions</h2>
             <p>
               The IIIF community consists of a growing number of cultural heritage institutions and open source software projects
@@ -132,11 +132,6 @@
         -->
       </footer>
     </div>
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
-
-    <script src="js/main.js"></script>
 
   </body>
 </html>
