Added title tags

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
           <section class="main-interactive-image">
             <div class="wrapper">
               <div class="try-it">
-                <div class="label">Try it :</div>
+                <div class="label">Try it : </div>
                 <div class="iiif-url">
-                  http://stacks.stanford.edu/image/iiif/ff139pd0160%252FK90113-43/<select name="" class="try-it-region">
+                  http://stacks.stanford.edu/image/iiif/ff139pd0160%252FK90113-43/<select name="" class="try-it-region" title="Region parameters">
                     <option value="full">full</option>
-                  </select>/<select name="" class="try-it-size">
+                  </select>/<select name="" class="try-it-size" title="Size parameters">
                     <option value="full">full</option>
-                  </select>/<select name="" class="try-it-rotation">
+                  </select>/<select name="" class="try-it-rotation" title="Rotation parameters">
                     <option value="0">0</option>
                   </select>/native.jpg
                 </div>
