Removed index.html reference from home links

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
     <div class="header-container">
       <header class="wrapper clearfix">
-        <a class="title" title="IIIF : International Image Interoperability Framework" href="index.html">Home</a>
+        <a class="title" title="IIIF : International Image Interoperability Framework" href="/">Home</a>
         <nav>
           <ul>
             <li><a class="is-selected" href="about.html">About</a></li>
