--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="header-container">
       <header class="wrapper clearfix">
-        <a class="title" title="IIIF : International Image Interoperability Framework" href="index.html">Home</a>
+        <a class="title" title="IIIF : International Image Interoperability Framework" href="/">Home</a>
         <nav>
           <ul>
             <li><a href="about.html">About</a></li>
