Added try-it button and blurb links to home page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
               </p>
               <p>
                 <a href="technical-details.html"><input type="button" class="button-turquoise" value="Learn how to get started"></a>
+                <a href="#try-it-demo"><input type="button" class="button-turquoise" value="Try It"></a>
               </p>
             </div>
           </header>
@@ -56,21 +57,21 @@
           <section class="main-highlight-blurbs">
             <div class="wrapper">
               <div class="highlight community-driven">
-                <h2>Community Driven</h2>
+                <h2><a href="community.html">Community Driven</a></h2>
                 <p>
                  The IIIF is driven by a group of research libraries, national libraries, and nonprofit image repositories
                  committed to opening access to cherished image resources
                 </p>
               </div>
               <div class="highlight defined-apis">
-                <h2>Defined APIs</h2>
+                <h2><a href="technical-details.html">Defined APIs</a></h2>
                 <p>
                   The IIIF is anchored by two well defined application programming interfaces developed and vetted
                   by an open and rigorous community process
                 </p>
               </div>
               <div class="highlight plug-n-play">
-                <h2>Plug 'n Play Software</h2>
+                <h2><a href="apps-demos.html">Plug 'n Play Software</a></h2>
                 <p>
                   The IIIF encourages and supports the development compatible image serving and viewing software that
                   is easy to install and provides a dazzling user experience
@@ -82,7 +83,7 @@
           <section class="main-interactive-image">
             <div class="wrapper">
               <div class="try-it">
-                <div class="label">Try it : </div>
+                <div class="label"><a id="try-it-demo" name="try-it-demo">Try it :</a></div>
                 <div class="iiif-url">
                   http://stacks.stanford.edu/image/iiif/ff139pd0160%252FK90113-43/<select name="" class="try-it-region" title="Region parameters">
                     <option value="full">full</option>
