Added Google Analytics code

--- a/apps-demos.html
+++ b/apps-demos.html
@@ -143,49 +143,18 @@
     <div class="footer-container">
       <footer class="wrapper">
         Please send feedback to <a href="mailto:Please send feedback to iiif-discuss@googlegroups.com">iiif-discuss@googlegroups.com</a>
-        <!--
-        <div class="footer-column">
-          <h4>Fusce quis lacus</h4>
-          <ul>
-            <li>Lectus</li>
-            <li>Eu posuere enim  </li>
-            <li>Praesent lacus</li>
-            <li>Justo</li>
-            <li>Volupat viver</li>
-          </ul>
-        </div>
-        <div class="footer-column">
-          <h4>Morbi a posuere</h4>
-          <ul>
-            <li>Arcu nulla </li>
-            <li>Quis porta quam  </li>
-            <li>Praesent lacus </li>
-            <li>Donec ornare </li>
-            <li>Massa</li>
-          </ul>
-        </div>
-        <div class="footer-column">
-          <h4>Quis lacus</h4>
-          <ul>
-            <li>Vel </li>
-            <li>Porta leo congue </li>
-            <li>Quis vestibulum </li>
-            <li>Pellentesque tellus </li>
-            <li>In dui</li>
-          </ul>
-        </div>
-        <div class="footer-column">
-          <h4>Facilisis venenatis</h4>
-          <ul>
-            <li>Cras nec enim </li>
-            <li>Mi Mauris   </li>
-            <li>Condimentum </li>
-            <li>Luctus diam </li>
-          </ul>
-        </div>
-        -->
       </footer>
     </div>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-7219229-22', 'iiif.io');
+      ga('send', 'pageview');
+    </script>
 
   </body>
 </html>
