--- a/technical-details.html
+++ b/technical-details.html
@@ -84,7 +84,7 @@
             <p>
               <ul>
                 <li>
-                  <a href="https://github.com/pulibrary/loris" target="_blank">Loris</a> is an open source,  Pyton-based image
+                  <a href="https://github.com/pulibrary/loris" target="_blank">Loris</a> is an open source,  Python-based image
                   server that supports the IIIF Image API ver 1.1.  It supports JPEG, JPEG2000 and TIFF source images.
                 </li>
                 <li>
