--- a/apps-demos.html
+++ b/apps-demos.html
@@ -102,7 +102,7 @@
 
               <dt><a href="https://github.com/pulibrary/loris" target="_blank">Loris</a></dt>
               <dd>
-                Loris is an open source,  Pyton-based image server that supports the IIIF Image API ver 1.1.  Loris supports JPEG and TIFF sources as well as JPEG2000.
+                Loris is an open source,  Python-based image server that supports the IIIF Image API ver 1.1.  Loris supports JPEG and TIFF sources as well as JPEG2000.
               </dd>
             </dl>
           </section>
