New style for IIIF params

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   </div>
                   <div class="params">
                      <div class="param-label-none">&nbsp;</div>
-                     <div class="param-value">://</div>
+                     <div class="param-value-none">://</div>
                   </div>
                   <div class="params">
                      <div class="param-label">server</div>
@@ -100,7 +100,7 @@
                   </div>
                   <div class="params">
                      <div class="param-label-none">&nbsp;</div>
-                     <div class="param-value">/</div>
+                     <div class="param-value-none">/</div>
                   </div>
                   <div class="params">
                      <div class="param-label">prefix</div>
@@ -108,7 +108,7 @@
                   </div>
                   <div class="params">
                      <div class="param-label-none">&nbsp;</div>
-                     <div class="param-value">/</div>
+                     <div class="param-value-none">/</div>
                   </div>
                   <div class="params">
                      <div class="param-label">identifier</div>
@@ -116,7 +116,7 @@
                   </div>
                   <div class="params">
                      <div class="param-label-none">&nbsp;</div>
-                     <div class="param-value">/</div>
+                     <div class="param-value-none">/</div>
                   </div>
                   <div class="params">
                      <div class="param-label">region</div>
@@ -124,7 +124,7 @@
                   </div>
                   <div class="params">
                      <div class="param-label-none">&nbsp;</div>
-                     <div class="param-value">/</div>
+                     <div class="param-value-none">/</div>
                   </div>
                   <div class="params">
                      <div class="param-label">size</div>
@@ -132,7 +132,7 @@
                   </div>
                   <div class="params">
                      <div class="param-label-none">&nbsp;</div>
-                     <div class="param-value">/</div>
+                     <div class="param-value-none">/</div>
                   </div>
                   <div class="params">
                      <div class="param-label">rotation</div>
@@ -140,7 +140,7 @@
                   </div>
                   <div class="params">
                      <div class="param-label-none">&nbsp;</div>
-                     <div class="param-value">/</div>
+                     <div class="param-value-none">/</div>
                   </div>
                   <div class="params">
                      <div class="param-label">quality</div>
@@ -148,7 +148,7 @@
                   </div>
                   <div class="params">
                      <div class="param-label-none">&nbsp;</div>
-                     <div class="param-value">.</div>
+                     <div class="param-value-none">.</div>
                   </div>
                   <div class="params">
                      <div class="param-label">format</div>
