--- a/apps-demos.html
+++ b/apps-demos.html
@@ -133,6 +133,11 @@
                 The Shared Canvas project has a variety of sample implementations that illustrate the power of the Shared Canvas data model
                 (which is the basis of the IIIF Metadata API).  The image servers behind the demos are IIIF compatible.
               </dd>
+              
+              <dt><a href="http://demos.biblissima-condorcet.fr/mirador/" target="_blank">Biblissima</a></dt>
+              <dd>
+                The <a href="http://www.biblissima-condorcet.fr/" target="_blank">Biblissima Project</a> is a hub for digital humanities projects in France.  They have an implementation of Mirador that currently shows content hosted at multiple institutions and will, increasingly, provide access to French content.
+              </dd>
             </dl>
           </section>
 
