--- a/community.html
+++ b/community.html
@@ -65,7 +65,7 @@
               <dt></dt>
               <dd>
                 ARTstor <br/>
-                Biblissima <br/>
+                <a href="http://www.biblissima-condorcet.fr/" target="_blank">Biblissima</a> <br/>
                 Bodleian Libraries, Oxford University <br/>
                 British Library <br/>
                 Codices Electronici Sangallenses <br/>
