--- a/apps-demos.html
+++ b/apps-demos.html
@@ -134,7 +134,7 @@
                 (which is the basis of the IIIF Metadata API).  The image servers behind the demos are IIIF compatible.
               </dd>
               
-              <dt><a href="http://demos.biblissima-condorcet.fr/mirador/" target="_blank">Biblissima</a></dt>
+              <dt><a href="http://demos.biblissima-condorcet.fr/mirador/" target="_blank">Biblissima - Mirador Demo</a></dt>
               <dd>
                 The <a href="http://www.biblissima-condorcet.fr/" target="_blank">Biblissima Project</a> is a hub for digital humanities projects in France.  They have an implementation of Mirador that currently shows content hosted at multiple institutions and will, increasingly, provide access to French content.
               </dd>
