--- a/apps-demos.html
+++ b/apps-demos.html
@@ -136,7 +136,7 @@
               
               <dt><a href="http://demos.biblissima-condorcet.fr/mirador/" target="_blank">Biblissima - Mirador Demo</a></dt>
               <dd>
-                The <a href="http://www.biblissima-condorcet.fr/" target="_blank">Biblissima Project</a> is a hub for digital humanities projects in France.  They have an implementation of Mirador that currently shows content hosted at multiple institutions and will, increasingly, provide access to French content.
+                The <a href="http://www.biblissima-condorcet.fr/" target="_blank">Biblissima Project</a> is a hub for digital humanities projects in France that is focused on the written cultural heritage of the Middle Ages and the Renaissance.  They have an implementation of Mirador that currently shows content hosted at multiple institutions and will, increasingly, provide access to French content.
               </dd>
             </dl>
           </section>
