--- a/index.html
+++ b/index.html
@@ -84,88 +84,80 @@
             <div class="wrapper">
 
               <div class="try-it" style="clear: both;">
-                <div class="label"><h2><a id="try-it" name="try-it">Try it</a></h2></div>
-                <div class="iiif-url">
-                  <div class="params">
+                <div class="label">
+                  <h2><a id="try-it" name="try-it">Try it</a></h2>
+                </div>
+
+                <ul class="iiif-url">
+                  <li>
                      <div class="param-label">scheme</div>
                      <div class="param-value">http</div>
-                  </div>
-                  <div class="params">
+                  </li>
+                  <li>
                      <div class="param-label-none">&nbsp;</div>
                      <div class="param-value-none">://</div>
-                  </div>
-                  <div class="params">
+                  </li>
+                  <li>
                      <div class="param-label">server</div>
                      <div class="param-value">stacks.stanford.edu</div>
-                  </div>
-                  <div class="params">
+                  </li>
+                  <li>
                      <div class="param-label-none">&nbsp;</div>
                      <div class="param-value-none">/</div>
-                  </div>
-                  <div class="params">
+                  </li>
+                  <li>
                      <div class="param-label">prefix</div>
                      <div class="param-value">image/iiif</div>
-                  </div>
-                  <div class="params">
+                  </li>
+                  <li>
                      <div class="param-label-none">&nbsp;</div>
                      <div class="param-value-none">/</div>
-                  </div>
-                  <div class="params">
+                  </li>
+                  <li>
                      <div class="param-label">identifier</div>
                      <div class="param-value">ff139pd0160%252FK90113-43</div>
-                  </div>
-                  <div class="params">
+                  </li>
+                  <li>
                      <div class="param-label-none">&nbsp;</div>
                      <div class="param-value-none">/</div>
-                  </div>
-                  <div class="params">
+                  </li>
+                  <li>
                      <div class="param-label">region</div>
                      <div class="param-value"><select name="" class="try-it-region" title="Region parameters"></select></div>
-                  </div>
-                  <div class="params">
+                  </li>
+                  <li>
                      <div class="param-label-none">&nbsp;</div>
                      <div class="param-value-none">/</div>
-                  </div>
-                  <div class="params">
+                  </li>
+                  <li>
                      <div class="param-label">size</div>
                      <div class="param-value"> <select name="" class="try-it-size" title="Size parameters"></select> </div>
-                  </div>
-                  <div class="params">
+                  </li>
+                  <li>
                      <div class="param-label-none">&nbsp;</div>
                      <div class="param-value-none">/</div>
-                  </div>
-                  <div class="params">
+                  </li>
+                  <li>
                      <div class="param-label">rotation</div>
                      <div class="param-value"><select name="" class="try-it-rotation" title="Rotation parameters"></select></div>
-                  </div>
-                  <div class="params">
+                  </li>
+                  <li>
                      <div class="param-label-none">&nbsp;</div>
                      <div class="param-value-none">/</div>
-                  </div>
-                  <div class="params">
+                  </li>
+                  <li>
                      <div class="param-label">quality</div>
                      <div class="param-value">native</div>
-                  </div>
-                  <div class="params">
+                  </li>
+                  <li>
                      <div class="param-label-none">&nbsp;</div>
                      <div class="param-value-none">.</div>
-                  </div>
-                  <div class="params">
+                  </li>
+                  <li>
                      <div class="param-label">format</div>
                      <div class="param-value">jpg</div>
-                  </div>
-                </div>
-                <!--
-                <div class="iiif-url">
-                  http://stacks.stanford.edu/image/iiif/ff139pd0160%252FK90113-43/<select name="" class="try-it-region" title="Region parameters">
-                    <option value="full">full</option>
-                  </select>/<select name="" class="try-it-size" title="Size parameters">
-                    <option value="full">full</option>
-                  </select>/<select name="" class="try-it-rotation" title="Rotation parameters">
-                    <option value="0">0</option>
-                  </select>/native.jpg
-                </div>
-                -->
+                  </li>
+                </ul>
               </div>
 
               <div class="container-image">
