Added FSI Server to apps-demos page

--- a/apps-demos.html
+++ b/apps-demos.html
@@ -85,6 +85,17 @@
                 </p>
               </dd>
 
+              <dt><a href="http://www.fsi-viewer.com/" target="_blank">FSI Server</a></dt>
+              <dd>
+                <p>
+                  FSI Server is a popular commercial solution for serving high resolution images in multiple formats.&nbsp; It accompanies the
+                  Flash-based FSI Viewer for zoom and pan.
+                </p>
+                <p>
+                  There is a <a href="https://github.com/jhu-digital-manuscripts/rosa/tree/master/rosa-iiif-endpoint" target="_blank">IIIF adaptor for FSI server</a>.
+                </p>
+              </dd>
+
               <dt><a href="http://iipimage.sourceforge.net/documentation/server/" target="_blank">IIPImage Server</a></dt>
               <dd>
                 <p>
@@ -133,7 +144,7 @@
                 The Shared Canvas project has a variety of sample implementations that illustrate the power of the Shared Canvas data model
                 (which is the basis of the IIIF Metadata API).  The image servers behind the demos are IIIF compatible.
               </dd>
-              
+
               <dt><a href="http://demos.biblissima-condorcet.fr/mirador/" target="_blank">Biblissima - Mirador Demo</a></dt>
               <dd>
                 The <a href="http://www.biblissima-condorcet.fr/" target="_blank">Biblissima Project</a> is a hub for digital humanities projects in France that is focused on the written cultural heritage of the Middle Ages and the Renaissance.  They have an implementation of Mirador that currently shows content hosted at multiple institutions and will, increasingly, provide access to French content.
