Added ContentDM to apps-demos page

--- a/apps-demos.html
+++ b/apps-demos.html
@@ -72,6 +72,19 @@
           <section class="image-servers wrapper">
             <h2>Image servers</h2>
             <dl>
+              <dt><a href="http://www.contentdm.org/" target="_blank">ContentDM</a></dt>
+              <dd>
+                <p>
+                  ContentDM is a full-featured digital collection management system
+                  supported by OCLC that includes image hosting and metadata management.
+                </p>
+                <p>
+                  A <a href="https://github.com/IIIF/image-api/tree/master/translators/ContentDM" target="_blank">
+                  Python-based translator</a> has been produced that can make the images hosted in
+                  your ContentDM installation fully IIIF compatible.
+                </p>
+              </dd>
+
               <dt><a href="http://sourceforge.net/projects/djatoka/" target="_blank">djatoka</a></dt>
               <dd>
                 <p>
