--- a/technical-details.html
+++ b/technical-details.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>IIIF | International Image Interoperability Framework &rsaquo; Home</title>
+    <title>IIIF | International Image Interoperability Framework &rsaquo; Technical Details</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
