--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <div class="highlight plug-n-play">
                 <h2><a href="apps-demos.html">Plug 'n Play Software</a></h2>
                 <p>
-                  The IIIF encourages and supports the development compatible image serving and viewing software that
+                  The IIIF encourages and supports the development of compatible image serving and viewing software that
                   is easy to install and provides a dazzling user experience
                 </p>
               </div>
