CSS layout changes

--- a/apps-demos.html
+++ b/apps-demos.html
@@ -45,28 +45,32 @@
 
           <section class="image-viewers wrapper">
             <h2>Image viewing clients</h2>
-            <dl>
-              <dt><a href="https://github.com/ruven/iipmooviewer" target="_blank">IIP mooViewer</a></dt>
-              <dd>
-                IIPMooViewer is an open source, Javascript and HTML5 image streaming and zooming client.  IIPMooViewer is IIIF-compatible and
-                works with <a href="https://github.com/ruven/iipsrv/tree/iiif" target="_blank">IIPServer</a> or other IIIF compatible servers.
-                Visit the <a href="http://iipimage.sourceforge.net/demo" target="_blank">IIP demo page</a> to see the IIP viewers in action.
-              </dd>
-
-              <dt><a href="http://dmstech.github.io/mirador/" target="_blank">Mirador</a></dt>
-              <dd>
-                Mirador is an open source image, Javascript and HTML5 viewer that delivers high resolution images in a workspace that enables
-                comparison of multiple images from multiple repositories.  Mirador is fully IIIF-compatible. Visit the
-                <a href="http://dmstech.github.io/mirador/demo" target="_blank">Mirador demo</a> to see it in action.
-              </dd>
-
-              <dt><a href="http://openseadragon.github.io/" target="_blank">OpenSeadragon</a></dt>
-              <dd>
-                OpenSeadragon is an open-source, Javascript viewer enabling smooth deep zoom and pan of high resolution images.  OpenSeadragon
-                is IIIF compatible.  A demo of OpenSeadragon in action can be seen on the
-                <a href="http://openseadragon.github.io/" target="_blank">project homepage</a>.
-              </dd>
-            </dl>
+            <ul>
+              <li>
+                <p class="font-weight-600"><a href="https://github.com/ruven/iipmooviewer" target="_blank">IIP mooViewer</a></p>
+                <p>
+                  IIPMooViewer is an open source, Javascript and HTML5 image streaming and zooming client.  IIPMooViewer is IIIF-compatible and
+                  works with <a href="https://github.com/ruven/iipsrv/tree/iiif" target="_blank">IIPServer</a> or other IIIF compatible servers.
+                  Visit the <a href="http://iipimage.sourceforge.net/demo" target="_blank">IIP demo page</a> to see the IIP viewers in action.
+                </p>
+              </li>
+              <li>
+                <p class="font-weight-600"><a href="http://dmstech.github.io/mirador/" target="_blank">Mirador</a></p>
+                <p>
+                  Mirador is an open source image, Javascript and HTML5 viewer that delivers high resolution images in a workspace that enables
+                  comparison of multiple images from multiple repositories.  Mirador is fully IIIF-compatible. Visit the
+                  <a href="http://dmstech.github.io/mirador/demo" target="_blank">Mirador demo</a> to see it in action.
+                </p>
+              </li>
+              <li>
+                <p class="font-weight-600"><a href="http://openseadragon.github.io/" target="_blank">OpenSeadragon</a></p>
+                <p>
+                  OpenSeadragon is an open-source, Javascript viewer enabling smooth deep zoom and pan of high resolution images.  OpenSeadragon
+                  is IIIF compatible.  A demo of OpenSeadragon in action can be seen on the
+                  <a href="http://openseadragon.github.io/" target="_blank">project homepage</a>.
+                </p>
+              </li>
+            </ul>
           </section>
 
           <section class="image-servers wrapper">
